# reflect-open

./: .coderabbit.yaml  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ja.md  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  turbo.json  vitest.config.ts
apps/cli/: Cargo.toml
apps/cli/src/: error.rs  frontmatter.rs  index.rs  lib.rs  main.rs  mutation.rs  note_file.rs  paths.rs  resolve.rs  search.rs  slug.rs
apps/cli/src/commands/: append.rs  backlinks.rs  create.rs  delete.rs  list.rs  mod.rs  move_note.rs  open.rs  output.rs  path.rs  restore.rs  search.rs  show.rs  tags.rs  task.rs  tasks.rs  today.rs  write.rs
apps/cli/tests/: cli.rs  parity.rs
crates/graph-paths/: Cargo.toml
crates/graph-paths/src/: lib.rs  walk.rs
design-system/: package.json  readme.md
docs/: cli.md  deep-links.md  ios-testflight.md  macos-distribution.md  multi-window.md  privacy.md  readable-filenames.md  reflect-v1-backlink-menu.md  reflect-v1-mobile-audio-memos.md  reflect-v1-mobile-overview.md  reflect-v1-overview.md  reflect-v2-grounding-brief.md  reflect-v2-mobile-grounding-brief.md  reflect-v2-product-vision.md  reflect-v2-sync-strategy.md
fixtures/: gen-path-classification.mjs  graph-path-classification.json
plugins/tauri-plugin-sharesheet/: Cargo.toml  README.md  build.rs
plugins/tauri-plugin-sharesheet/ios/: Package.swift
plugins/tauri-plugin-sharesheet/ios/Sources/: SharesheetPlugin.swift
plugins/tauri-plugin-sharesheet/permissions/: default.toml
plugins/tauri-plugin-sharesheet/permissions/autogenerated/: reference.md
plugins/tauri-plugin-sharesheet/permissions/schemas/: schema.json
plugins/tauri-plugin-sharesheet/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
(+1098 files in other folders)
