[package]
name = "reflect-cli"
version = "0.1.0"
description = "Scriptable read and write access to a Reflect graph"
edition = "2021"

[[bin]]
name = "reflect"
path = "src/main.rs"

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reflect-index-schema = { path = "../../crates/index-schema", default-features = false }
clap = { version = "4.6.1", features = ["derive"] }
jiff = "0.2.28"
sha2 = { workspace = true }
pulldown-cmark = "0.13.4"
saphyr = "0.0.6"
tempfile = { workspace = true }
ulid = "1.2.1"
unicode-normalization = "0.1.25"

[dev-dependencies]
reflect-index-schema = { path = "../../crates/index-schema" }
