[package]
name = "tauri-plugin-sharesheet"
version = "0.1.0"
authors = ["Reflect"]
description = "Present the native iOS share sheet for a piece of text."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-sharesheet"

[dependencies]
tauri = { version = "2.11.2" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.6.2", features = ["build"] }
